--- a/app/views/statements/index.html.slim
+++ b/app/views/statements/index.html.slim
@@ -1,12 +1,23 @@
-table
-  - @statements.each_with_index do |statement, index|
+.container
+  table.table.table-striped
     tr
-      td= index + 1
-      td= statement.user[:name]
-      td= statement.user[:number]
-      td= statement[:status]
-      td= statement[:specialty]
-      td= statement[:educational_program]
-      td= statement[:study_mode]
-      td= statement[:basis]
-      td= statement[:points]
+      th #
+      th Фамилия Имя Отчество
+      th Рег #
+      th Состояние
+      th Направление (специальность)
+      th Образовательная/магистерская программа (институт/филиал)
+      th Форма обучения
+      th Бюджетная (контрактная) основа
+      th Сумма конкурсных баллов
+    - @statements.each_with_index do |statement, index|
+      tr
+        td= index + 1
+        td= link_to statement.user[:name], user_path(statement.user[:number])
+        td= statement.user[:number]
+        td= statement[:status]
+        td= statement[:specialty]
+        td= statement[:educational_program]
+        td= statement[:study_mode]
+        td= statement[:basis]
+        td= statement[:points]
