--- a/app/assets/stylesheets/components/bootstrap.scss
+++ b/app/assets/stylesheets/components/bootstrap.scss
@@ -5,9 +5,8 @@ h3.fio {
   height: 23px;
 }
 .form-group {
-  position: absolute;
-  right: 50%;
-  left: 50%;
+  position: relative;
+  right: 10%;
 
   display: block;
 
