--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,9 +1,10 @@
 nav.navbar.navbar-default
-  .container-fluid
+  .container
     .navbar-header
       = link_to image_tag('http://urfu.ru/typo3conf/ext/urfu/Resources/Public/images/header/logo1.png'), 'http://urfu.ru/ru/alpha/full/', class: 'navbar-brand', target: '_blank'
       = link_to 'Списки поступающих', root_path, class: 'navbar-brand'
-    = form_for :search, url: root_path, method: 'get', html: {class: 'navbar-form navbar-center', role: 'search'} do |f|
-      .form-group
-        = f.text_field :name, type: "text", class: "form-control", placeholder: "ФИО(полностью)"
-        = f.button 'Найти', type: "submit", class: "btn btn-default"
+    .collapse.navbar-collapse
+      = form_for :search, url: root_path, method: 'get', html: {class: 'navbar-form navbar-center', role: 'search'} do |f|
+        .form-group
+          = f.text_field :name, type: "text", class: "form-control", placeholder: "ФИО(полностью)"
+          = f.button 'Найти', type: "submit", class: "btn btn-default"
