--- a/app/assets/stylesheets/components/bootstrap.scss
+++ b/app/assets/stylesheets/components/bootstrap.scss
@@ -1,6 +1,10 @@
 h3.fio {
   text-align: center;
 }
+footer.navbar {
+  margin-top: 20px;
+  margin-bottom: auto;
+}
 .navbar-brand > img {
   height: 23px;
 }
