--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -6,5 +6,5 @@ nav.navbar.navbar-default
     .collapse.navbar-collapse
       = form_tag root_path, method: 'get', role: 'search', class: 'navbar-form navbar-center' do |f|
         .form-group
-          = text_field_tag :query, params[:query], type: "text", class: "form-control", placeholder: "ФИО или регистрационный номер"
+          = text_field_tag :query, params[:query], type: "text", class: "form-control", placeholder: "ФИО или регистрационный номер без ноля вначале"
           = button_tag 'Найти', type: "submit", class: "btn btn-default"
