feature(statement, parser): add education document

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,12 +1,12 @@
 .container
   h3.fio= "#{@user.name} (##{@user.number})"
-  h2=
 
   - @statements.each do |statement|
     .panel.panel-default
       table.table
         tr
           th Состояние
+          th Док. об образовании
           th Направление (специальность)
           th Образовательная/магистерская программа (институт/филиал)
           th Форма обучения
@@ -14,6 +14,7 @@
           th Сумма конкурсных баллов
         tr
           td= statement.status
+          td= statement.edu_doc
           td= statement.specialty
           td= statement.educational_program
           td= statement.study_mode
