--- a/app/views/statements/index.html.slim
+++ b/app/views/statements/index.html.slim
@@ -5,6 +5,7 @@
       th Фамилия Имя Отчество
       th Рег #
       th Состояние
+      th Док. об образовании
       th Направление (специальность)
       th Образовательная/магистерская программа (институт/филиал)
       th Форма обучения
@@ -16,6 +17,7 @@
         td= link_to statement.user[:name], user_path(statement.user[:number])
         td= statement.user[:number]
         td= statement[:status]
+        td= statement[:edu_doc]
         td= statement[:specialty]
         td= statement[:educational_program]
         td= statement[:study_mode]
