feature(users): add life search

--- a/app/assets/stylesheets/components/bootstrap.scss
+++ b/app/assets/stylesheets/components/bootstrap.scss
@@ -24,8 +24,8 @@ footer.navbar {
 
     width: 430px;
 
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    // border-top-right-radius: 0;
+    // border-bottom-right-radius: 0;
   }
   button.btn.btn-default {
     float: left;
