--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,9 +7,8 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = react_component 'App'
-/    = render partial: 'layouts/header'
-/    = render partial: 'layouts/yandex_mertika'
-/    = yield
-/    = render partial: 'layouts/footer'
-/    = render partial: 'layouts/github_ribbons'
+    = react_component 'Header'
+    = render partial: 'layouts/yandex_mertika'
+    = yield
+    = react_component 'Footer'
+    = render partial: 'layouts/github_ribbons'
