--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,6 +1,1 @@
-.container
-  .row
-    - if @users.nil? || @users.empty?
-      h1.light Самое время найти себя
-    - @users.each do |user|
-      h3.fio= link_to user.name, user_path(user.number)
+= react_component 'Users', users: @users
