chore(react): add server side rendering

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,8 +7,8 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = react_component 'Header'
+    = react_component 'Header', prerender: true
     = render partial: 'layouts/yandex_mertika'
     = yield
-    = react_component 'Footer'
+    = react_component 'Footer', prerender: true
     = render partial: 'layouts/github_ribbons'
