--- a/app/views/statements/index.html.slim
+++ b/app/views/statements/index.html.slim
@@ -1,1 +1,1 @@
-= react_component 'Statements', statements: @statements, users: @users
+= react_component('Statements', {statements: @statements, users: @users}, prerender: true)
