--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,1 +1,3 @@
-= react_component 'Users', users: @users, prerender: true
+= content_for :description, "Рейтинговые списки абитуриентов УрФУ. Бережно взятые с официального сайта и представленые в удобном виде. Сайт ежедневно обновляется с мая по сентябрь."
+
+= react_component 'Users', users: @users
