--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,3 +1,6 @@
+= content_for :title, @user.name
+= content_for :description, "#{@statements.first.study_mode} форма обучения, #{@statements.first.basis} по образовательной программе #{@statements.first.educational_program} с суммой конкурсных баллов #{@statements.first.points}"
+
 .container
   h3.fio= "#{@user.name} (##{@user.number})"
 
