chore(sitemap): add Sitemap

--- a/app/views/users/update.html.slim
+++ b/app/views/users/update.html.slim
@@ -6,4 +6,4 @@
       = "Уже осталось менее #{@minutes} минут."
     p= 'Самое время сделать перерыв и выпить с любимыми чашечку ароматного чая.'
     p= 'Или зайти в контактик.'
-    p= link_to 'В контактик', 'http://vk.com', class: 'btn btn-primary btn-lg', id: 'vkontaktik-tss', target: '_blank'
+    p= link_to 'В контактик', 'http://vk.com', class: 'btn btn-primary btn-lg', id: 'vkontaktik', target: '_blank'
