--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html
   head
     title= full_title(yield(:title))
     meta[name="description" content= yield(:description)]
+    meta[name="google-site-verification" content="xShCyG5zvTqkYzbv9IqkSrCUyGwjLf-j4ADaC-LTXmM"]
     meta[name="yandex-verification" content="68fa711cf4489f19"]
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
