--- a/app/views/statements/sitemap.xml.erb
+++ b/app/views/statements/sitemap.xml.erb
@@ -5,10 +5,9 @@
   <url>
     <loc><%= statements_url %></loc>
   </url>
-  <% User.all.each do |user| %>
+  <% Statement.select(:number).distinct.each do |statement| %>
     <url>
-      <loc><%= user_url(user) %></loc>
-      <lastmod><%= user.created_at.strftime("%Y-%m-%dT%H:%M:%S%:z") %></lastmod>
+      <loc>http://abiturient-urfu.herokuapp.com/<%= statement.number %></loc>
       <changefreq>daily</changefreq>
       <priority>1.0</priority>
     </url>
