Add Google Analytics

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,4 +14,5 @@ html
     = yield
     = react_component 'Footer'
     = render partial: 'layouts/yandex_mertika'
+    = render partial: 'layouts/google_analytics'
     = render partial: 'layouts/github_ribbons'
