--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,9 @@
 doctype html
 html
   head
+    meta content="xShCyG5zvTqkYzbv9IqkSrCUyGwjLf-j4ADaC-LTXmM" name="google-site-verification"
     title= full_title(@title)
     meta[name="description" content= @description]
-    meta[name="google-site-verification" content="xShCyG5zvTqkYzbv9IqkSrCUyGwjLf-j4ADaC-LTXmM"]
     meta[name="yandex-verification" content="68fa711cf4489f19"]
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
